--- a/Depo/LifeBox_Business/Presentation/SubViews/EmptyView/EmptyView.xib
+++ b/Depo/LifeBox_Business/Presentation/SubViews/EmptyView/EmptyView.xib
@@ -16,16 +16,16 @@
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MR9-pD-zgi">
-                    <rect key="frame" x="0.0" y="64" width="414" height="832"/>
+                    <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4sb-Sz-nLP" userLabel="SearchHeader">
-                            <rect key="frame" x="15" y="0.0" width="42" height="21"/>
+                            <rect key="frame" x="15" y="4" width="42" height="21"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="edY-Gb-tLj" userLabel="title label">
-                            <rect key="frame" x="186" y="416" width="42" height="0.0"/>
+                            <rect key="frame" x="186" y="409" width="42" height="0.0"/>
                             <constraints>
                                 <constraint firstAttribute="height" id="Ukh-ss-aGo"/>
                             </constraints>
@@ -34,18 +34,18 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalCompressionResistancePriority="1000" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qtr-NV-B1N">
-                            <rect key="frame" x="30" y="426" width="354" height="20.5"/>
+                            <rect key="frame" x="30" y="419" width="354" height="20.5"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="hidden_big" translatesAutoresizingMaskIntoConstraints="NO" id="VT1-hY-bSE">
-                            <rect key="frame" x="147.5" y="306" width="119" height="80"/>
+                            <rect key="frame" x="147.5" y="299" width="119" height="80"/>
                         </imageView>
                     </subviews>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <constraints>
-                        <constraint firstItem="4sb-Sz-nLP" firstAttribute="top" secondItem="MR9-pD-zgi" secondAttribute="top" id="GI1-Lt-IAO"/>
+                        <constraint firstItem="4sb-Sz-nLP" firstAttribute="top" secondItem="MR9-pD-zgi" secondAttribute="top" constant="4" id="GI1-Lt-IAO"/>
                         <constraint firstAttribute="trailing" secondItem="Qtr-NV-B1N" secondAttribute="trailing" constant="30" id="MPZ-mG-oD0"/>
                         <constraint firstItem="Qtr-NV-B1N" firstAttribute="leading" secondItem="MR9-pD-zgi" secondAttribute="leading" constant="30" id="Nb1-71-Aqt"/>
                         <constraint firstItem="edY-Gb-tLj" firstAttribute="centerX" secondItem="MR9-pD-zgi" secondAttribute="centerX" id="SAs-Da-9cH"/>
@@ -60,12 +60,13 @@
             <viewLayoutGuide key="safeArea" id="FKm-xa-1rL"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="MR9-pD-zgi" secondAttribute="bottom" id="5Vj-a6-T5E"/>
+                <constraint firstItem="FKm-xa-1rL" firstAttribute="bottom" secondItem="MR9-pD-zgi" secondAttribute="bottom" id="5Vj-a6-T5E"/>
                 <constraint firstItem="MR9-pD-zgi" firstAttribute="trailing" secondItem="FKm-xa-1rL" secondAttribute="trailing" id="Cnp-aD-PSP"/>
-                <constraint firstItem="MR9-pD-zgi" firstAttribute="top" secondItem="FKm-xa-1rL" secondAttribute="top" constant="20" id="hu7-ae-Xre"/>
+                <constraint firstItem="MR9-pD-zgi" firstAttribute="top" secondItem="FKm-xa-1rL" secondAttribute="top" id="hu7-ae-Xre"/>
                 <constraint firstItem="MR9-pD-zgi" firstAttribute="leading" secondItem="FKm-xa-1rL" secondAttribute="leading" id="yif-nL-tcp"/>
             </constraints>
             <connections>
+                <outlet property="bottomOffsetConstraint" destination="5Vj-a6-T5E" id="cUr-dB-9wW"/>
                 <outlet property="emptyLabel" destination="Qtr-NV-B1N" id="hu6-0g-jvU"/>
                 <outlet property="emptyTitleLabel" destination="edY-Gb-tLj" id="h6W-ES-9QT"/>
                 <outlet property="empyTitleLabelHeight" destination="Ukh-ss-aGo" id="c5Q-Vx-VxA"/>
