--- a/Depo/Depo/Presentation/UserStories/Settings/FaceImage/FaceImageViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/FaceImage/FaceImageViewController.xib
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -15,7 +13,7 @@
         </array>
     </customFonts>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FaceImageViewController" customModule="lifebox" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FaceImageViewController" customModule="Billo" customModuleProvider="target">
             <connections>
                 <outlet property="designer" destination="pu3-QY-bUD" id="A3M-rA-mNB"/>
                 <outlet property="displayManager" destination="E6W-gA-F3l" id="0Vp-XR-hbf"/>
@@ -26,7 +24,7 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="623"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hNw-Pj-QXr" userLabel="face image View">
@@ -109,7 +107,7 @@
                         </view>
                     </subviews>
                 </stackView>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rTe-cC-LX9">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rTe-cC-LX9">
                     <rect key="frame" x="47" y="372.5" width="281" height="50"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="50" id="39i-gY-W2T"/>
@@ -150,7 +148,7 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HH3-jN-8kF">
                             <rect key="frame" x="0.0" y="91.5" width="335" height="35"/>
                             <subviews>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zth-QW-h0a" customClass="GradientPremiumButton" customModule="lifebox" customModuleProvider="target">
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zth-QW-h0a" customClass="GradientPremiumButton" customModule="Billo" customModuleProvider="target">
                                     <rect key="frame" x="144.5" y="0.0" width="46" height="35"/>
                                     <state key="normal" title="Button"/>
                                     <connections>
@@ -169,6 +167,7 @@
                     </subviews>
                 </stackView>
             </subviews>
+            <viewLayoutGuide key="safeArea" id="cgP-Cu-WBb"/>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="yKZ-qH-VVG" firstAttribute="leading" secondItem="cgP-Cu-WBb" secondAttribute="leading" constant="20" id="3D6-Vw-nOa"/>
@@ -192,10 +191,9 @@
                 <constraint firstItem="hNw-Pj-QXr" firstAttribute="top" secondItem="cgP-Cu-WBb" secondAttribute="top" constant="20" id="zBk-p6-Mdf"/>
             </constraints>
             <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
-            <viewLayoutGuide key="safeArea" id="cgP-Cu-WBb"/>
-            <point key="canvasLocation" x="60.5" y="69.5"/>
+            <point key="canvasLocation" x="126" y="69"/>
         </view>
-        <customObject id="E6W-gA-F3l" customClass="FaceImageDisplayManager" customModule="lifebox" customModuleProvider="target">
+        <customObject id="E6W-gA-F3l" customClass="FaceImageDisplayManager" customModule="Billo" customModuleProvider="target">
             <connections>
                 <outlet property="faceImagePremiumButton" destination="zth-QW-h0a" id="1rI-9s-Nkc"/>
                 <outlet property="faceImageStackView" destination="BaH-JO-rG7" id="WP0-BS-o01"/>
@@ -210,7 +208,7 @@
                 <outlet property="threeFaceImageLabel" destination="vnL-jg-oC7" id="Woy-FS-jMI"/>
             </connections>
         </customObject>
-        <customObject id="pu3-QY-bUD" customClass="FaceImageDesigner" customModule="lifebox" customModuleProvider="target">
+        <customObject id="pu3-QY-bUD" customClass="FaceImageDesigner" customModule="Billo" customModuleProvider="target">
             <connections>
                 <outlet property="faceImageAllowedLabel" destination="h4B-P5-Rce" id="2b9-fd-bFp"/>
                 <outlet property="faceImagePremiumButton" destination="zth-QW-h0a" id="BTu-YP-emr"/>
