--- a/Depo/Depo/Presentation/UserStories/Settings/Settings/Cells/SettingsTableViewSwitchCell.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/Settings/Cells/SettingsTableViewSwitchCell.xib
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="SettingsTableViewSwitchCell" rowHeight="136" id="3mG-D2-QgA" customClass="SettingsTableViewSwitchCell" customModule="LifeTech_lifedrive" customModuleProvider="target">
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="SettingsTableViewSwitchCell" rowHeight="136" id="3mG-D2-QgA" customClass="SettingsTableViewSwitchCell" customModule="Billo" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="509" height="136"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="3mG-D2-QgA" id="YVX-31-fgL">
@@ -71,7 +71,7 @@
                 <outlet property="stateSwitch" destination="Z8I-VA-ybz" id="SLo-UU-rxb"/>
                 <outlet property="titleLabel" destination="Ncf-o4-MLS" id="R09-Z7-JYi"/>
             </connections>
-            <point key="canvasLocation" x="-599.20000000000005" y="118.74062968515743"/>
+            <point key="canvasLocation" x="-95" y="97"/>
         </tableViewCell>
     </objects>
 </document>
